<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >

<RelativeLayout android:id="@+id/reltop" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textStyle="bold" android:textSize="25sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center|center_horizontal" android:id="@+id/postdeals" android:text="@string/postdeals"></TextView>
</RelativeLayout>
   
   <RelativeLayout android:id="@+id/rel1" android:layout_width="match_parent" android:layout_height="wrap_content">
       <TextView android:textStyle="bold" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_marginRight="10dip" android:layout_alignParentTop="true" android:text="@string/prod"></TextView>
       <EditText android:maxWidth="50px" android:layout_height="60px" android:id="@+id/edit1" android:textSize="18sp" android:text="" android:layout_marginLeft="140dip" android:layout_marginRight="10dip" android:layout_width="wrap_content"></EditText>
   </RelativeLayout>
   
   <RelativeLayout android:id="@+id/rel2" android:layout_width="match_parent" android:layout_height="wrap_content">
       <TextView android:textStyle="bold" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_marginRight="10dip" android:text="@string/price"></TextView>
       <EditText android:maxWidth="50px" android:layout_height="60px" android:id="@+id/edit2" android:textSize="18sp" android:text="" android:layout_marginLeft="140dip" android:layout_marginRight="20dip" android:layout_width="wrap_content" android:inputType="numberDecimal"></EditText>      
       
   </RelativeLayout>
   
   <RelativeLayout android:id="@+id/rel3" android:layout_width="match_parent" android:layout_height="wrap_content">
       <TextView android:textStyle="bold" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_marginRight="10dip" android:text="@string/qty"></TextView>
       <EditText android:maxWidth="50px" android:layout_height="60px" android:id="@+id/edit3" android:textSize="18sp" android:text="" android:layout_marginLeft="140dip" android:layout_marginRight="20dip" android:layout_width="wrap_content" android:inputType="numberDecimal"></EditText>
            
       
   </RelativeLayout>
   
    <RelativeLayout android:id="@+id/rel4" android:layout_width="match_parent" android:layout_height="wrap_content">
       <TextView android:textStyle="bold" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_marginRight="10dip" android:text="@string/store"></TextView>
       <EditText android:maxWidth="50px" android:layout_height="60px" android:id="@+id/edit4" android:textSize="18sp" android:text="" android:layout_marginLeft="140dip" android:layout_marginRight="20dip" android:inputType="text" android:layout_width="wrap_content"></EditText>
       <Button android:id="@+id/response" android:text="@string/response" android:layout_height="60px" android:layout_width="120px" android:layout_marginLeft="70dip" android:layout_alignParentRight="true"></Button>      
       
   </RelativeLayout>
      
      
      
   <RelativeLayout android:id="@+id/relbottom" android:layout_width="match_parent" android:layout_height="wrap_content">
   <TextView android:textSize="25sp" android:textStyle="bold" android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center|center_horizontal" android:id="@+id/response" android:text="@string/deals"></TextView>
   </RelativeLayout>
   

    <ListView android:id="@android:id/list" 
   			  android:layout_height="wrap_content" 
   			  android:layout_width="match_parent"
			  android:textColor="#000000" >
   </ListView>
   
   <TextView android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/emptysetdeals"/>
    
    </LinearLayout>